--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <script src="https://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
     <script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script src="https://static.robotwebtools.org/keyboardteleopjs/current/keyboardteleop.min.js"></script>
-    <script src="//yoannmoinet.github.io/nipplejs/javascripts/nipplejs.js"></script>
+    <script src='//yoannmoinet.github.io/nipplejs/javascripts/nipplejs.js'></script>
     <script src="webui.js"></script>
 </body>
 </html>
