--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <style>
             body {background-color: rgb(230, 227, 222)}
-        </style>
+    </style>
 
     </head>
   <body class="bg-grey">
@@ -200,6 +200,8 @@
                 createJoystick();
                 initTeleopKeyboard();
             };
+            //add to test of "createJoystick()" works
+            createJoystick();
         }
     
     </script>
